--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 */node_modules
 /server/notetrove-9f4e6-firebase-adminsdk-gmcsq-be15713652.json
+/server/cybsor-firebase-adminsdk-gb55e-6efb6131ea.json
